# convict

./: .gitignore  setup.sh
.memoire/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  project.json
backend/: .gitignore  pyproject.toml
backend/convict/: config.py  database.py
backend/convict/api/: app.py  deps.py
backend/convict/api/v1/: auth.py  devices.py  fish.py  health.py  insights.py  intelligence.py  observations.py  router.py  schedules.py  stream.py  tank.py  tank_config.py  zones.py
backend/convict/engines/control/: device_controller.py
backend/convict/engines/experience/: prediction_engine.py  ws_broadcaster.py
backend/convict/engines/intelligence/: anomaly_detector.py  auto_registrar.py  baseline_builder.py  community_health.py  flow_analyzer.py  identity_resolver.py  pattern_modeler.py  species_guesser.py  vlm_analyzer.py
backend/convict/engines/knowledge/: tank_knowledge_engine.py
backend/convict/engines/observation/: camera.py  detector.py  frame_processor.py  hls_streamer.py  mjpeg_streamer.py  nxt_sensor.py  tracker.py
backend/convict/models/: __init__.py  behavior_baseline.py  behavior_event.py  behavior_pattern.py  camera_placement.py  community_health_snapshot.py  detection_frame.py  evidence_bundle.py  identity_hypothesis.py  interaction_edge.py  known_fish.py  prediction.py  schedule.py  tank.py  tank_obstacle.py  track.py  zone.py
backend/convict/pipeline/: db_writer.py  orchestrator.py  retention.py
backend/convict/schemas/: known_fish.py  schedule.py  tank.py  zone.py
backend/convict/utils/: geometry.py
frontend/lib/: ws.ts  (+6 more)
(+49 files in other folders)
