[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convict"
version = "0.1.0"
description = "Aquarium intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "ultralytics>=8.2.0",
    "opencv-python-headless>=4.10.0",
    "supervision>=0.22.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "rfdetr>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["convict*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
